# mathscript

./: CNAME  README.md  asset-manifest.json  build.sh  index.html  package-lock.json  package.json  precache-manifest.3d164c65db5dad1a63f4b9f4d9a8b4ba.js  service-worker.js  tsconfig.json
app/: .eslintcache  CMakeLists.txt  build.sh  package-lock.json  package.json  tsconfig.json
app/config/: webpack.config.js
app/mathscript-library/: mathscript.wasm
app/public/: index.html  interpreter.wasm  manifest.json
app/src/: App.css  App.tsx
backend/: package-lock.json  package.json
bytecode-interpreter/: Cargo.toml  ackermann.in  closure_test.in  recursion_test.in  result.out
bytecode-interpreter/src/: compiler.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  vm.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
interpreter/: CMakeLists.txt  Cargo.toml  ast.cpp  ast.h  bindings.cpp  bridge.cpp  bridge.h  data.cpp  data.h  errors.cpp  errors.h  grammar.txt  grammar_out.txt  parser.cpp  parser.h  serve.sh  symtable.cpp
interpreter/src/: ast.rs  data.rs  errors.rs  global.rs  gparser.rs  grammar.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  pq.rs  symtable.rs
mathscript/: CMakeLists.txt  ast.cpp  ast.h  data.cpp  data.h  global.cpp  global.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  symtable.cpp  symtable.h  token.cpp  token.h  units.cpp  units.h
src/: App.tsx
src/interpreter/: ast.ts  computable.ts  errors.ts  functions.ts  global.ts  (+4 more)
testapp/: package-lock.json  package.json  test.py
(+133 files in other folders)
