[package]
name = "interpreter"
version = "0.1.0"
authors = ["Pranav Putta <pranav.putta22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
phf = { version = "0.7.24", features = ["macros"] }
wasm-bindgen = { version = "0.2.34", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }

